--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
         <div class="sidebar-wrapper">
             <div class="profile-container">
                 <img class="profile" src="assets/images/profile.png" alt="" />
-                <h1 class="name">Bengkel Pemograman</h1>
-                <h3 class="tagline">Full Stack Developer</h3>
+                <h1 class="name">Isra Mahendra Syakir</h1>
+                <h3 class="tagline">Hamba Allah</h3>
             </div><!--//profile-container-->
             
             <div class="contact-container container-block pr-5">
                 <ul class="list-unstyled contact-list">
-                    <li class="email"><i class="fas fa-envelope"></i><a href="#">yourmail@gmail.com</a></li>
-                    <li class="phone"><i class="fas fa-phone"></i><a href="tel:0123 456 789">0123 456 789</a></li>
+                    <li class="email"><i class="fas fa-envelope"></i><a href="#">isramahendra99@gmail.com</a></li>
+                    <li class="phone"><i class="fas fa-phone"></i><a href="tel:0123 456 789">082292999123</a></li>
                     <li class="website"><i class="fas fa-globe"></i><a href="#" target="_blank">portfoliosite.com</a></li>
                     <li class="github"><i class="fab fa-github"></i><a href="#" target="_blank">github.com/username</a></li>
                     <li class="twitter"><i class="fab fa-twitter"></i><a href="https://twitter.com/3rdwave_themes" target="_blank">@twittername</a></li>
@@ -47,7 +47,7 @@
                 <div class="item">
                     <h4 class="degree">D3 Telecommunication Technology</h4>
                     <h5 class="meta">Telkom University</h5>
-	                    <div class="time">2016 - 2018</div>
+	                    <div class="time">2019 - 2022</div>
                 </div><!--//item-->
                 <div class="item">
                     <h4 class="degree">D3 Telecommunication Technology </h4>
